complete basic requirement
- add getThrowing api
- refactor globaly
